--- a/index.html
+++ b/index.html
@@ -7,9 +7,16 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <div id="customContextMenu" class="context-menu shadow-sm">
+  <ul class="list-unstyled mb-0">
+    <li class="context-item">👁️ Visualizar página</li>
+  </ul>
+</div>
+
     <div id="loading" style="display: none">
       <div class="capybaraloader">
         <div class="capybara">
@@ -58,12 +65,28 @@
         <button class="btn btn-secondary" id="clearBtn">Limpar</button>
       </div>
 
+
       <div
         id="pagesContainer"
         class="mt-5 pt-5 row g-4"
         style="display: none"
       ></div>
     </div>
+
+    <!-- Modal para visualização da página -->
+<div class="modal fade" id="pdfModal" tabindex="-1" aria-hidden="true">
+  <div class="modal-dialog modal-xl modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Visualizar Página</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+      </div>
+      <div class="modal-body text-center">
+        <canvas id="modalCanvas" style="max-width: 100%; border: 1px solid #ccc;"></canvas>
+      </div>
+    </div>
+  </div>
+</div>
 
     <script src="https://cdn.jsdelivr.net/npm/pdf-lib/dist/pdf-lib.min.js"></script>
 
@@ -75,5 +98,6 @@
 
       import "./script.js";
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
