--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+
+    
     <div id="customContextMenu" class="context-menu shadow-sm">
   <ul class="list-unstyled mb-0">
     <li class="context-item">👁️ Visualizar página</li>
@@ -63,6 +65,15 @@
           Baixar PDF sem páginas
         </button>
         <button class="btn btn-secondary" id="clearBtn">Limpar</button>
+
+        <a
+  href="https://capivara-informata.vercel.app/"
+  target="_blank"
+  rel="noopener noreferrer"
+  class="btn-nv"
+>
+  NOVA VERSÃO
+</a>
       </div>
 
 
